# new_organisation

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml
Python/: pyvenv.cfg
buildscripts/: add_ns_record_to_shared_data_portal_services.sh  add_policy_for_approval_lambda.sh  deploy.sh  destroy.sh  install-poetry.sh  install-terraform.sh  quality.sh
buildspecs/: buildspec-data-portal-activation.yml  buildspec-data-portal-verification.yml  buildspec-operations-portal.yml  buildspec-teardown.yml  buildspec.yml
e2e/: README.md  pytest.ini  requirements.txt  upload_reports.py
e2e/models/: enums.py  errors.py
e2e/services/: outputs_handler.py  report_lambda_handler.py  report_uploader.py
e2e/tests/: conftest.py  global_commons.py  logger.py
e2e/tests/data_portal/: commons.py  conftest.py  labels.py  (+2 more)
infra/terraform/: .terraform.lock.hcl  README.md  locals.tf  main.tf  moved.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
src/shared/: env_validator.py  requirements.txt  rest_client.py  utils.py
tests/: conftest.py  test_approval_service.py  test_get_token_from_envs.py  test_message_parser.py
tests/config_composer/: test_handler.py  test_secrets.py  test_ssm.py
tests/deployment_data_extractor/: test_dde_handler.py
tests/execution_params_validator/: test_epv_handler.py  test_sfn_params.py
tests/execution_record_handler/: test_execution_record_factory.py  test_execution_record_validator.py  test_handler.py
tests/password_rotator/: test_rotator_handler.py
tests/reporter/: test_handler.py
tests/shared/: test_cognito.py  test_env_validator.py  test_secrets.py  test_ssm.py  test_sts.py  test_utils.py
(+174 files in other folders)
